# rusty-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust-ci.yml
src/: main.rs
src/api/: chat.rs  user.rs
src/schemas/: chat.rs  user.rs
