[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-watch = "8.5.2"
actix-web = "^4"
uuid = {version= "^1.9.0", features =["v4"]}
serde = {version="^1",features = ["derive"]}
log ="^0.4"
ollama-rs = "^0.2.0"
dotenv = "^0.15.0"
spider = "1.98.4"
reqwest = {version= "^0.12.5", features =["blocking"]}
